# bat_engine-windows

./: .gitignore  README.md
bat/: [HH-MM]-backup.bat  readme.txt
bat/7z/: cpu.bat  init.bat  update.bat
bat/7z/private/: find-000.bat  find-001.bat  find.bat
bat/cmake/: init.bat  update.bat
bat/cmake/private/: find-000.bat  find-001.bat  find.bat
bat/engine/: initial.bat  run.bat  settings.bat  update.bat
bat/engine/private/: build.bat  clean.bat  configs.bat  custom.bat  detect.bat  expand.bat  generate.bat  initial.bat  install.bat  loop.bat  run.bat  runIDE.bat  runTests.bat  settings.bat  version.bat
bat/git/: init.bat  update.bat
bat/git/private/: find-000.bat  find-001.bat  find.bat
bat/mingw/: _cache.bat  get_version.bat  init.bat  update.bat
bat/mingw/private/: find-000.bat  find-001.bat  find.bat
bat/msvc/: _cache.bat  get_version.bat  init.bat  runIDE.bat  update.bat
bat/msvc/private/: find.bat  runIDE.bat
bat/qtcreator/: _cache.bat  init.bat  runIDE.bat  update.bat
bat/qtcreator/private/: find-000.bat  find-001.bat  find.bat  runIDE.bat
bat/qtcreator/private/test/helloworld/: CMakeLists.txt  main.cpp
bat/tools/: contained.bat  eVARIABLES.bat  expand_template.bat  find_root.bat  format_string.bat  latest_directory.bat  normalize.bat  to_lower.bat  to_upper.bat  view_variables.bat
bat/tools/test/: 000-test-contained.bat  001-test-eVARIABLES.bat  002-test-find_root.bat  003-test-latest_directory.bat  004-test-normalize.bat  005-test-normalize.bat  006-test-normalize.bat  007-test-normalize.bat  008-test-normalize.bat  009-test-normalize.bat  010-test-normalize.bat  011-test-normalize.bat  012-test-normalize.bat  013-test-to_lower.bat  014-test-to_lower.bat  015-test-to_lower.bat  016-test-to_lower.bat  017-test-to_upper.bat  018-test-to_upper.bat  019-test-to_upper.bat  020-test-to_upper.bat  021-test-view_variables.bat  022-test-view_variables.bat
docs/: 000-bat-notation.md  000-bat-workflow.md  001-bat-task.md  002-bat-commands.md  004-bat-commands.md  005-bat-variables.md  007-bat-commands.md  history.md  home.md
docs/adm/workflow_example/: main.md
docs/dev/: 000-variables.md  001-find.md  002-cmd-sinopsis.md  003-cmd-implement.md  004-cmd-attrib.md  005-misc.md  006-find.md  007-mask.md  008-architecture.md  008-bat-symptoms.md  009-arch-raw-map.md  009-bat-expand.md
docs/dev/arch/: 000-run.md  001-initial.md  002-update.md  003-settings.md  (+18 more)
docs/public/: 000-get_started.md  001-get_started.md  001-settings.md  002-commands.md  003-request.md  004-customize.md  005-project_root.md
docs/tasks/: 2021y-01m-04d-000-workflow.md  2021y-01m-04d-00022-workflow.md  2021y-01m-04d-00023-runTests.md  2023-01m-30-00025-bug-collect.md  2023-01m-30-00025-dev-msvc2022.md  2023-01m-31-00027-dev-path.md  2023-02m-02-00029-dev-cfg.md  2023-03m-14-00031-bug-cfg.md  2023-05m-25-00033-bug-run.md  2025-02m-27-00035-dev-msvc.md
docs/test/: 000-tests.md
example/deploy/: make-debug.bat  make-full.bat  make.bat  run-hello.bat  run-msvc.bat  run-qtcreator.bat
example/src/: main.cpp
hello_world/deploy/: CMakeLists.txt  make.bat
(+257 files in other folders)
