
# 2020y-12m-21d. WorkSpace project.
################################################################################
################################################################################

cmake_minimum_required(VERSION 3.0)
project(hello CXX)

file(GLOB_RECURSE gSOURCES  *.cpp)

add_executable(hello ${gSOURCES})

################################################################################
################################################################################

